--- a/web/header.tmpl
+++ b/web/header.tmpl
@@ -11,6 +11,9 @@
                 <li class="nav-item">
                     <a class="nav-link" data-toggle="modal" data-target="#login-modal">登录</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" data-toggle="modal" data-target="#register-modal">注册</a>
+                </li>
             </ul>
         </div>
     </nav>
